--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -13,14 +13,17 @@
 
       <!-- Google Font: Poppins -->
       <link
-         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+         href="https://fomts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
          rel="stylesheet"
       />
 
       <!-- Font Awesome Icons -->
       <link
          rel="stylesheet"
-         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
       />
 
       <!-- Global CSS from src/main/resources/static/style.css -->
