--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -33,7 +33,7 @@
       <!-- Navbar -->
       <nav class="navbar">
          <div class="container">
-            <a th:href="@{/**/}" class="logo">
+            <a th:href="@{/}" class="logo">
                <i class="fas fa-city"></i> MyCityGov
             </a>
             <ul class="nav-links">
