--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -20,6 +20,12 @@
 
          <br />
          <form th:action="@{/logout}" method="post">
+            <input
+               type="hidden"
+               th:if="${_csrf != null}"
+               th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}"
+            />
             <div class="form-group text-center">
                <button type="submit" class="btn btn-primary text-md">
                   <i class="fas fa-sign-out-alt"></i> Αποσύνδεση τώρα
