--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -78,6 +78,7 @@
 
                <li>
                   <form
+                     class="logout-form"
                      th:action="@{/logout}"
                      method="post"
                      style="display: inline"
