Added html for appointments + controller for appointments/tickets

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -19,6 +19,7 @@
                     <a th:href="@{/tickets/new}" class="btn btn-primary"
                     >Νέο Αίτημα</a
                     >
+                    <a th:href="@{/appointments}" class="btn btn-secondary">Ραντεβού</a>
                     <a
                             th:href="@{/register}"
                             class="btn btn-dark"
