--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -50,6 +50,9 @@
                   <a th:href="@{/tickets}">Αιτήματα</a>
                </li>
                <li sec:authorize="isAuthenticated()">
+                  <a th:href="@{/appointments}">Ραντεβού</a>
+               </li>
+               <li sec:authorize="isAuthenticated()">
                   <form
                      class="logout-form"
                      th:action="@{/logout}"
