--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -134,10 +134,8 @@
                         name="newStatus"
                         class="form-select"
                      >
-                        <option value="IN_PROCESSING">Σε Επεξεργασία</option>
-                        <option value="AWAITING_DOCS">
-                           Σε Αναμονή Στοιχείων
-                        </option>
+                        <option value="IN_PROGRESS">Σε Επεξεργασία</option>
+                        <option value="WAITING_FOR_INFO">Σε Αναμονή Στοιχείων</option>
                         <option value="COMPLETED">Ολοκληρωμένο</option>
                         <option value="REJECTED">Απορρίφθηκε</option>
                      </select>
