--- a/src/main/resources/templates/tickets.html
+++ b/src/main/resources/templates/tickets.html
@@ -15,7 +15,7 @@
             <a th:href="@{/profile}" class="text-sm" style="color: #666">
                <i class="fas fa-user-circle"></i> Συνδεδεμένος ως:
                <b
-                  th:text="${me.emailAddress()} + ' (' + ${me.type()} + ')'"
+                  th:text="${me.email()} + ' (' + ${me.type()} + ')'"
                ></b>
             </a>
          </div>
